# HyprWin

./: .gitignore  CLAUDE.md  LICENSE  SPEC.md  plan.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-08-ai-dev-setup.md
docs/superpowers/specs/: 2026-05-08-ai-dev-setup-design.md
hyprtile/: BUG_HUNT.md  Cargo.toml  SPEC_AUDIT.md  build.rs
hyprtile/benches/: perf.rs
hyprtile/docs/: .ai_stop.md  CONFIGURATION.md  DEVELOPERS_GUIDE.md  IPC_PROTOCOL.md
hyprtile/installer/: hyprtile.iss
hyprtile/resources/: .ai_stop.md
hyprtile/src/: .ai_stop.md  app.rs  lib.rs  main.rs
hyprtile/src/app/: .ai_stop.md
hyprtile/src/config/: .ai_stop.md  defaults.rs  mod.rs  types.rs
hyprtile/src/ipc/: .ai_stop.md  commands.rs  mod.rs  protocol.rs
hyprtile/src/layout/: .ai_stop.md  bsp.rs  dwindle.rs  gaps.rs  grid.rs  master_stack.rs  mod.rs  monocle.rs
hyprtile/src/platform/: .ai_stop.md  dpi.rs  dwm.rs  events.rs  input.rs  mod.rs  monitor.rs  rect_conv.rs  shutdown.rs  startup.rs  tray.rs  window.rs
hyprtile/src/util/: .ai_stop.md  animation.rs  dpi.rs  mod.rs  rect.rs
hyprtile/src/window/: .ai_stop.md  filter.rs  mod.rs  model.rs  rules.rs
hyprtile/src/workspace/: .ai_stop.md  mod.rs  model.rs
hyprtile/tests/: .ai_stop.md  integration_tests.rs
hyprtile/tests/fixtures/: test_config.toml
stage1-util-config/config/: defaults.rs  mod.rs  types.rs
stage1-util-config/util/: animation.rs  dpi.rs  mod.rs  rect.rs
stage2-platform/platform/: dwm.rs  events.rs  input.rs  mod.rs  monitor.rs  window.rs
stage3-layout/hyprtile/src/layout/: bsp.rs  dwindle.rs  gaps.rs  grid.rs  master_stack.rs  mod.rs  monocle.rs
stage4-window-workspace/window/: filter.rs  mod.rs  model.rs  rules.rs
stage4-window-workspace/workspace/: mod.rs  model.rs
stage5-app-ipc/hyprtile/src/: app.rs  lib.rs  main.rs
stage6-docs-tests/: README.md
stage6-docs-tests/tests/: integration_tests.rs
(+3 files in other folders)
